Added directory for Checkpoint Store using Redis, pom.xml without test dependencies